// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SteamWidget renders AI summary if present 1`] = `
<DocumentFragment>
  <div
    data-testid="Widget"
  >
    <div
      data-testid="WidgetHeader"
    >
      Steam
    </div>
    <div
      class="css-fxxzhu"
    >
      <div
        class="css-lvgdrp"
      >
        <p>
          This is an AI summary
        </p>
      </div>
      <p
        class="css-17yje2i"
      >
        Generated with Claude Sonnet 4.6 (AI)
      </p>
    </div>
    <div
      class="css-5abbi3"
    >
      <h3
        class="css-9nh3l5"
      >
        Recently-Played Games
      </h3>
    </div>
    <p
      class="css-zxnhh7"
    >
      Games I've played in the last two weeks.
    </p>
    <div
      class="css-1o4v4vi"
    >
      <button
        aria-label="View Half-Life on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-w24l45"
        >
          <img
            alt="Half-Life header"
            class="css-17nz09e"
            src="https://example.com/halflife.jpg"
          />
          <div
            class="steam-game-card_caption css-k8brg5"
          >
            <div
              class="css-h3pxs9"
            >
              Half-Life
            </div>
            <div
              class="css-1i7ls3l"
            >
              2 hours
            </div>
          </div>
        </div>
      </button>
      <button
        aria-label="View Portal on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-w24l45"
        >
          <img
            alt="Portal header"
            class="css-17nz09e"
            src="https://example.com/portal.jpg"
          />
          <div
            class="steam-game-card_caption css-k8brg5"
          >
            <div
              class="css-h3pxs9"
            >
              Portal
            </div>
            <div
              class="css-1i7ls3l"
            >
              45 minutes
            </div>
          </div>
        </div>
      </button>
    </div>
    <div
      class="css-5abbi3"
    >
      <h3
        class="css-9nh3l5"
      >
        Leaderboard
      </h3>
    </div>
    <p
      class="css-zxnhh7"
    >
      My top 10 most played games.
    </p>
    <div
      class="css-sak8bt"
    >
      <div
        class="css-munl51"
      >
        <button
          aria-label="View Cities: Skylines on Steam"
          class="css-1br4deq"
          type="button"
        >
          <div
            class="css-w24l45"
          >
            <img
              alt="Cities: Skylines header"
              class="css-17nz09e"
              src="https://example.com/cities-icon.jpg"
            />
            <div
              class="css-17mv9gi"
            >
              1
            </div>
            <div
              class="steam-game-card_caption css-k8brg5"
            >
              <div
                class="css-h3pxs9"
              >
                Cities: Skylines
              </div>
              <div
                class="css-1i7ls3l"
              >
                757.35h total • 2 hours recently
              </div>
            </div>
          </div>
        </button>
        <button
          aria-label="View ARK: Survival Evolved on Steam"
          class="css-1br4deq"
          type="button"
        >
          <div
            class="css-w24l45"
          >
            <img
              alt="ARK: Survival Evolved header"
              class="css-17nz09e"
              src="https://example.com/ark-icon.jpg"
            />
            <div
              class="css-17mv9gi"
            >
              2
            </div>
            <div
              class="steam-game-card_caption css-k8brg5"
            >
              <div
                class="css-h3pxs9"
              >
                ARK: Survival Evolved
              </div>
              <div
                class="css-1i7ls3l"
              >
                277.83h total
              </div>
            </div>
          </div>
        </button>
      </div>
      <div
        class="css-rcbrnq"
      >
        <div
          class="css-aq86v7"
        >
          Total Hours: 
          <span
            class="css-1eduwqk"
          >
            1035.2h
          </span>
        </div>
        <div
          class="css-aq86v7"
        >
          Average: 
          <span
            class="css-1eduwqk"
          >
            517.6h per game
          </span>
        </div>
      </div>
      <div
        class="css-1gnkw3u"
      >
        <a
          class="css-4buc8m"
          href="https://steamcommunity.com/id/themeuser/games/?tab=all"
        >
          View complete gaming library
          <span>
            <svg
              aria-hidden="true"
              focusable="false"
              height="0.75em"
              viewBox="0 0 512 512"
              width="0.75em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M432 320h-32a16 16 0 0 0-16 16v112H64V128h144a16 16 0 0 0 16-16V80a16 16 0 0 0-16-16H48a48 48 0 0 0-48 48v352a48 48 0 0 0 48 48h352a48 48 0 0 0 48-48V336a16 16 0 0 0-16-16zM488 0h-168c-13.3 0-24 10.7-24 24v8c0 13.3 10.7 24 24 24h69.2L207 279.6a24.06 24.06 0 0 0 0 34l10.2 10.2a24.06 24.06 0 0 0 34 0L425 128.8V200c0 13.3 10.7 24 24 24h8c13.3 0 24-10.7 24-24V56c0-30.9-25.1-56-56-56z"
                fill="currentColor"
              />
            </svg>
          </span>
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SteamWidget renders correctly with sample data 1`] = `
<DocumentFragment>
  <div
    data-testid="Widget"
  >
    <div
      data-testid="WidgetHeader"
    >
      Steam
    </div>
    <div
      class="css-5abbi3"
    >
      <h3
        class="css-9nh3l5"
      >
        Recently-Played Games
      </h3>
    </div>
    <p
      class="css-zxnhh7"
    >
      Games I've played in the last two weeks.
    </p>
    <div
      class="css-1o4v4vi"
    >
      <button
        aria-label="View Half-Life on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-w24l45"
        >
          <img
            alt="Half-Life header"
            class="css-17nz09e"
            src="https://example.com/halflife.jpg"
          />
          <div
            class="steam-game-card_caption css-k8brg5"
          >
            <div
              class="css-h3pxs9"
            >
              Half-Life
            </div>
            <div
              class="css-1i7ls3l"
            >
              2 hours
            </div>
          </div>
        </div>
      </button>
      <button
        aria-label="View Portal on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-w24l45"
        >
          <img
            alt="Portal header"
            class="css-17nz09e"
            src="https://example.com/portal.jpg"
          />
          <div
            class="steam-game-card_caption css-k8brg5"
          >
            <div
              class="css-h3pxs9"
            >
              Portal
            </div>
            <div
              class="css-1i7ls3l"
            >
              45 minutes
            </div>
          </div>
        </div>
      </button>
    </div>
    <div
      class="css-5abbi3"
    >
      <h3
        class="css-9nh3l5"
      >
        Leaderboard
      </h3>
    </div>
    <p
      class="css-zxnhh7"
    >
      My top 10 most played games.
    </p>
    <div
      class="css-sak8bt"
    >
      <div
        class="css-munl51"
      >
        <button
          aria-label="View Cities: Skylines on Steam"
          class="css-1br4deq"
          type="button"
        >
          <div
            class="css-w24l45"
          >
            <img
              alt="Cities: Skylines header"
              class="css-17nz09e"
              src="https://example.com/cities-icon.jpg"
            />
            <div
              class="css-17mv9gi"
            >
              1
            </div>
            <div
              class="steam-game-card_caption css-k8brg5"
            >
              <div
                class="css-h3pxs9"
              >
                Cities: Skylines
              </div>
              <div
                class="css-1i7ls3l"
              >
                757.35h total • 2 hours recently
              </div>
            </div>
          </div>
        </button>
        <button
          aria-label="View ARK: Survival Evolved on Steam"
          class="css-1br4deq"
          type="button"
        >
          <div
            class="css-w24l45"
          >
            <img
              alt="ARK: Survival Evolved header"
              class="css-17nz09e"
              src="https://example.com/ark-icon.jpg"
            />
            <div
              class="css-17mv9gi"
            >
              2
            </div>
            <div
              class="steam-game-card_caption css-k8brg5"
            >
              <div
                class="css-h3pxs9"
              >
                ARK: Survival Evolved
              </div>
              <div
                class="css-1i7ls3l"
              >
                277.83h total
              </div>
            </div>
          </div>
        </button>
      </div>
      <div
        class="css-rcbrnq"
      >
        <div
          class="css-aq86v7"
        >
          Total Hours: 
          <span
            class="css-1eduwqk"
          >
            1035.2h
          </span>
        </div>
        <div
          class="css-aq86v7"
        >
          Average: 
          <span
            class="css-1eduwqk"
          >
            517.6h per game
          </span>
        </div>
      </div>
      <div
        class="css-1gnkw3u"
      >
        <a
          class="css-4buc8m"
          href="https://steamcommunity.com/id/themeuser/games/?tab=all"
        >
          View complete gaming library
          <span>
            <svg
              aria-hidden="true"
              focusable="false"
              height="0.75em"
              viewBox="0 0 512 512"
              width="0.75em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M432 320h-32a16 16 0 0 0-16 16v112H64V128h144a16 16 0 0 0 16-16V80a16 16 0 0 0-16-16H48a48 48 0 0 0-48 48v352a48 48 0 0 0 48 48h352a48 48 0 0 0 48-48V336a16 16 0 0 0-16-16zM488 0h-168c-13.3 0-24 10.7-24 24v8c0 13.3 10.7 24 24 24h69.2L207 279.6a24.06 24.06 0 0 0 0 34l10.2 10.2a24.06 24.06 0 0 0 34 0L425 128.8V200c0 13.3 10.7 24 24 24h8c13.3 0 24-10.7 24-24V56c0-30.9-25.1-56-56-56z"
                fill="currentColor"
              />
            </svg>
          </span>
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SteamWidget renders error state (hasFatalError) 1`] = `
<DocumentFragment>
  <div
    data-testid="Widget"
  >
    <div
      data-testid="WidgetHeader"
    >
      Steam
    </div>
    <div
      class="css-5abbi3"
    >
      <h3
        class="css-9nh3l5"
      >
        Leaderboard
      </h3>
    </div>
    <p
      class="css-zxnhh7"
    >
      My top 10 most played games.
    </p>
    <div
      class="css-sak8bt"
    >
      <div
        class="css-16q7rgc"
      >
        <p
          class="css-13s56l1"
        >
          No gaming data available for library.
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SteamWidget renders loading state 1`] = `
<DocumentFragment>
  <div
    data-testid="Widget"
  >
    <div
      data-testid="WidgetHeader"
    >
      Steam
    </div>
    <div
      aria-hidden="true"
      class="css-1x6v59e"
    >
      <div
        class="show-loading-animation css-ylcmma"
      >
        <div
          class="text-block"
          style="width: 100%;"
        >
          <div
            class="text-row"
            style="max-height: 20%; width: 97%; height: 1em; background-color: rgb(239, 239, 239); margin-top: 0px;"
          />
          <div
            class="text-row"
            style="max-height: 20%; width: 100%; height: 1em; background-color: rgb(239, 239, 239); margin-top: 0.7em;"
          />
          <div
            class="text-row"
            style="max-height: 20%; width: 94%; height: 1em; background-color: rgb(239, 239, 239); margin-top: 0.7em;"
          />
        </div>
      </div>
      <div
        class="css-n4yf41"
      >
        <div
          aria-hidden="true"
          class="css-obv90v"
        />
      </div>
    </div>
    <div
      class="css-5abbi3"
    >
      <h3
        class="css-9nh3l5"
      >
        Recently-Played Games
      </h3>
    </div>
    <p
      class="css-zxnhh7"
    >
      Games I've played in the last two weeks.
    </p>
    <div
      class="css-1o4v4vi"
    >
      <div
        aria-hidden="true"
        class="css-uk8v2r"
      >
        <div
          class="show-loading-animation"
          style="width: 100%; height: 200px;"
        >
          <div
            class="rect-shape"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 200px; margin-right: 10px; border-radius: 8px;"
          />
        </div>
      </div>
      <div
        aria-hidden="true"
        class="css-uk8v2r"
      >
        <div
          class="show-loading-animation"
          style="width: 100%; height: 200px;"
        >
          <div
            class="rect-shape"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 200px; margin-right: 10px; border-radius: 8px;"
          />
        </div>
      </div>
      <div
        aria-hidden="true"
        class="css-uk8v2r"
      >
        <div
          class="show-loading-animation"
          style="width: 100%; height: 200px;"
        >
          <div
            class="rect-shape"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 200px; margin-right: 10px; border-radius: 8px;"
          />
        </div>
      </div>
      <div
        aria-hidden="true"
        class="css-uk8v2r"
      >
        <div
          class="show-loading-animation"
          style="width: 100%; height: 200px;"
        >
          <div
            class="rect-shape"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 200px; margin-right: 10px; border-radius: 8px;"
          />
        </div>
      </div>
      <div
        aria-hidden="true"
        class="css-uk8v2r"
      >
        <div
          class="show-loading-animation"
          style="width: 100%; height: 200px;"
        >
          <div
            class="rect-shape"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 200px; margin-right: 10px; border-radius: 8px;"
          />
        </div>
      </div>
      <div
        aria-hidden="true"
        class="css-uk8v2r"
      >
        <div
          class="show-loading-animation"
          style="width: 100%; height: 200px;"
        >
          <div
            class="rect-shape"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 200px; margin-right: 10px; border-radius: 8px;"
          />
        </div>
      </div>
    </div>
    <div
      class="css-5abbi3"
    >
      <h3
        class="css-9nh3l5"
      >
        Leaderboard
      </h3>
    </div>
    <p
      class="css-zxnhh7"
    >
      My top 10 most played games.
    </p>
    <div
      class="css-sak8bt"
    >
      <div
        class="css-nyc2gr"
      >
        <div
          class="css-17cb55"
        />
        <p
          class="css-gej412"
        >
          Loading Gaming Library...
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SteamWidget renders with empty metrics 1`] = `
<DocumentFragment>
  <div
    data-testid="Widget"
  >
    <div
      data-testid="WidgetHeader"
    >
      Steam
    </div>
    <div
      class="css-5abbi3"
    >
      <h3
        class="css-9nh3l5"
      >
        Recently-Played Games
      </h3>
    </div>
    <p
      class="css-zxnhh7"
    >
      Games I've played in the last two weeks.
    </p>
    <div
      class="css-1o4v4vi"
    >
      <button
        aria-label="View Half-Life on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-w24l45"
        >
          <img
            alt="Half-Life header"
            class="css-17nz09e"
            src="https://example.com/halflife.jpg"
          />
          <div
            class="steam-game-card_caption css-k8brg5"
          >
            <div
              class="css-h3pxs9"
            >
              Half-Life
            </div>
            <div
              class="css-1i7ls3l"
            >
              2 hours
            </div>
          </div>
        </div>
      </button>
      <button
        aria-label="View Portal on Steam"
        class="css-1br4deq"
        type="button"
      >
        <div
          class="css-w24l45"
        >
          <img
            alt="Portal header"
            class="css-17nz09e"
            src="https://example.com/portal.jpg"
          />
          <div
            class="steam-game-card_caption css-k8brg5"
          >
            <div
              class="css-h3pxs9"
            >
              Portal
            </div>
            <div
              class="css-1i7ls3l"
            >
              45 minutes
            </div>
          </div>
        </div>
      </button>
    </div>
    <div
      class="css-5abbi3"
    >
      <h3
        class="css-9nh3l5"
      >
        Leaderboard
      </h3>
    </div>
    <p
      class="css-zxnhh7"
    >
      My top 10 most played games.
    </p>
    <div
      class="css-sak8bt"
    >
      <div
        class="css-munl51"
      >
        <button
          aria-label="View Cities: Skylines on Steam"
          class="css-1br4deq"
          type="button"
        >
          <div
            class="css-w24l45"
          >
            <img
              alt="Cities: Skylines header"
              class="css-17nz09e"
              src="https://example.com/cities-icon.jpg"
            />
            <div
              class="css-17mv9gi"
            >
              1
            </div>
            <div
              class="steam-game-card_caption css-k8brg5"
            >
              <div
                class="css-h3pxs9"
              >
                Cities: Skylines
              </div>
              <div
                class="css-1i7ls3l"
              >
                757.35h total • 2 hours recently
              </div>
            </div>
          </div>
        </button>
        <button
          aria-label="View ARK: Survival Evolved on Steam"
          class="css-1br4deq"
          type="button"
        >
          <div
            class="css-w24l45"
          >
            <img
              alt="ARK: Survival Evolved header"
              class="css-17nz09e"
              src="https://example.com/ark-icon.jpg"
            />
            <div
              class="css-17mv9gi"
            >
              2
            </div>
            <div
              class="steam-game-card_caption css-k8brg5"
            >
              <div
                class="css-h3pxs9"
              >
                ARK: Survival Evolved
              </div>
              <div
                class="css-1i7ls3l"
              >
                277.83h total
              </div>
            </div>
          </div>
        </button>
      </div>
      <div
        class="css-rcbrnq"
      >
        <div
          class="css-aq86v7"
        >
          Total Hours: 
          <span
            class="css-1eduwqk"
          >
            1035.2h
          </span>
        </div>
        <div
          class="css-aq86v7"
        >
          Average: 
          <span
            class="css-1eduwqk"
          >
            517.6h per game
          </span>
        </div>
      </div>
      <div
        class="css-1gnkw3u"
      >
        <a
          class="css-4buc8m"
          href="https://steamcommunity.com/id/themeuser/games/?tab=all"
        >
          View complete gaming library
          <span>
            <svg
              aria-hidden="true"
              focusable="false"
              height="0.75em"
              viewBox="0 0 512 512"
              width="0.75em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M432 320h-32a16 16 0 0 0-16 16v112H64V128h144a16 16 0 0 0 16-16V80a16 16 0 0 0-16-16H48a48 48 0 0 0-48 48v352a48 48 0 0 0 48 48h352a48 48 0 0 0 48-48V336a16 16 0 0 0-16-16zM488 0h-168c-13.3 0-24 10.7-24 24v8c0 13.3 10.7 24 24 24h69.2L207 279.6a24.06 24.06 0 0 0 0 34l10.2 10.2a24.06 24.06 0 0 0 34 0L425 128.8V200c0 13.3 10.7 24 24 24h8c13.3 0 24-10.7 24-24V56c0-30.9-25.1-56-56-56z"
                fill="currentColor"
              />
            </svg>
          </span>
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SteamWidget renders with empty recentlyPlayedGames and ownedGames 1`] = `
<DocumentFragment>
  <div
    data-testid="Widget"
  >
    <div
      data-testid="WidgetHeader"
    >
      Steam
    </div>
    <div
      class="css-5abbi3"
    >
      <h3
        class="css-9nh3l5"
      >
        Leaderboard
      </h3>
    </div>
    <p
      class="css-zxnhh7"
    >
      My top 10 most played games.
    </p>
    <div
      class="css-sak8bt"
    >
      <div
        class="css-16q7rgc"
      >
        <p
          class="css-13s56l1"
        >
          No gaming data available for library.
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
